--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">TinNews</string>
     <string name="share_link">Share The Link</string>
     <string name="copy_the_link">Copy The Link</string>
+
+    <!-- add bottom bar string -->
+    <string name="tin">Tin</string>
+    <string name="save">Save</string>
+    <string name="profile">Profile</string>
 </resources>
