profile page added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,14 @@
 
     <!--4.2-->
     <string name="author_unknown">Unknown Author</string>
+
+    <!--3.2-->
+    <string name="clear_cache">Clear Cache</string>
+    <string name="setting">Setting</string>
+
+    <string name="change_source">Change Source</string>
+    <string name="de">de</string>
+    <string name="us">us</string>
+    <string name="cn">cn</string>
+    <string name="jp">jp</string>
 </resources>
